--- a/styles/index.css
+++ b/styles/index.css
@@ -1,8 +1,9 @@
 .section1 {
     background-color: #F1F8FB;
     padding-bottom: 4em;
-    width: 100%;
-    float: left;
+    align-items: center;
+    /*width: 100%;*/
+    /*float: left;*/
  }
 
 .section1 button {
@@ -20,20 +21,21 @@
 .section2 {
     background-color: #F1F8FB;
     text-align: center;
-    float: left;
-    padding-top: 4em;
+    /*padding-top: 4em;
     width:100%;
+    float: left;*/
+}
+
+.caption{
+  padding-left: 0;
+  padding-right: 0;
 }
 
 #intro {
-  margin-left: 100px;
+  /*margin-left: 100px;
   margin-top: 4em;
-  max-width: 40%;
-  float: left;
-}
-
-#home_graphic {
-  margin-top: 1em;
+  /*max-width: 40%;
+  float: left;*/
 }
 
 #homePage_button {
@@ -45,6 +47,11 @@
   font-size: 18px;
   font-weight: 600;
 }
+
+/*#home_graphic {
+  margin-top: 1em;
+}*/
+
 
 /* trying to fix arrows for carousel  */
 
@@ -80,10 +87,11 @@
 
 /* images */
 #home_img {
-  max-width: 35%;
+  /*max-width: 35%;*/
+  max-width: 100%;
   height: auto;
   margin-left: 8%;
-  /* float: right; */
+  float: right;
 }
 
 .carousel-content-container {
@@ -93,9 +101,9 @@
 }
 
 .carousel-text {
-    max-width: 40%;
+    /*max-width: 40%;*/
     margin: 2em 2em;
-    float: left;
+    /*float: left;*/
     text-align: left;
     font-size: 18px;
 }
@@ -118,16 +126,9 @@
   color: white;
 }
 
-.module-image {
-  max-height: 90%;
-  float: right;
-}
-
-.placeholder {
-  /* float: right; */
-  max-width: 16em;
-  margin-top: 4em;
-  margin-right: 8em;
+.carousel-moduleImage{
+  max-width: 70%;
+  margin: 2em 2em;
 }
 
 ol.carousel-indicators li {
@@ -136,7 +137,7 @@ ol.carousel-indicators li {
 }
 
 /*Mobile Format*/
-@media screen and (max-width: 480px) {
+/*@media screen and (max-width: 480px) {
   .navbar-container{
     display: none;
   }
@@ -175,11 +176,11 @@ ol.carousel-indicators li {
   .module-image {
     max-width: 100%;
   }
-}
+}*/
 
 
 /*Tablet Format*/
-@media screen and (max-width: 1024px) {
+/*@media screen and (max-width: 1024px) {
 
   .footer{
     display: none !important;
@@ -202,4 +203,4 @@ ol.carousel-indicators li {
     width: 60%;
   }
 
-}
+}*/
