FAQ page complete

--- a/styles/all.css
+++ b/styles/all.css
@@ -43,6 +43,18 @@ h4 {
   line-height: normal;
 }
 
+.nicelyRoundedButton {
+  background-color: #6EB43F;
+  color: #FFF;
+  width: 270px;
+  height: 60px;
+  border-radius: 30px;
+  cursor: pointer;
+  font-size: 20px;
+  font-weight: 600;
+  border: 0;
+}
+
 .caption {
   padding-top: 1em;
   padding-left: 16em;
