--- a/styles/all.css
+++ b/styles/all.css
@@ -1,9 +1,9 @@
 /* ========== *
  * = Global = *
  * ========== */
-/*html * {
+html * {
   font-family: Avenir Next;
-}*/
+}
 
 body {
   margin: auto;
