--- a/styles/forparents.css
+++ b/styles/forparents.css
@@ -12,6 +12,10 @@
   padding-bottom: 15px;
 }
 
+.parents_2 {
+  width: 90%;
+}
+
 /*For Parent Page Styling*/
 /* #forParents_s1 {
     background-color: #89CCE2;
