parents more ?s row done, educator screenshot 1

--- a/styles/forparents.css
+++ b/styles/forparents.css
@@ -16,6 +16,10 @@
   width: 90%;
 }
 
+.parents_3 {
+  width: 90%;
+}
+
 /*For Parent Page Styling*/
 /* #forParents_s1 {
     background-color: #89CCE2;
