--- a/styles/index.css
+++ b/styles/index.css
@@ -32,13 +32,6 @@
   padding-right: 0;
 }
 
-#intro {
-  /*margin-left: 100px;
-  margin-top: 4em;
-  /*max-width: 40%;
-  float: left;*/
-}
-
 #homePage_button {
   background-color: #489BFF;
   width: 250px;
@@ -49,64 +42,20 @@
   font-weight: 600;
 }
 
-/*#home_graphic {
-  margin-top: 1em;
-}*/
-
-
-/* trying to fix arrows for carousel  */
-
-.carousel-control-next {
-  padding-bottom: 5em;
-  padding-right: 10em;
-}
-
-.carousel-control-prev {
-  padding-bottom: 5em;
-  padding-left: 10em;
-}
-
-.carousel-control-next-icon {
-  caret-color: #fff;
-  background-color: #000;
-}
-
-.carousel-control-prev-icon {
-  caret-color: #fff;
-  background-color: #000;
-}
-
 /* Screen Reader */
 .sr-only {
   color: #000;
 }
 
-/* STYLE SHIT */
-.gold_accent {
-  color:#D2AC58;
+/* STYLE */
+.blue_accent {
+  color:#14A1F6;
 }
 
 /* images */
 #home_img {
-  /*max-width: 35%;*/
   max-width: 100%;
   height: auto;
-  margin-left: 8%;
-  float: right;
-}
-
-.carousel-content-container {
-    max-width: 60%;
-    margin: 2em auto;
-    height: 400px;
-}
-
-.carousel-text {
-    /*max-width: 40%;*/
-    margin: 2em 2em;
-    /*float: left;*/
-    text-align: left;
-    font-size: 18px;
 }
 
 .module-title {
