--- a/styles/all.css
+++ b/styles/all.css
@@ -42,12 +42,18 @@ h1{
   font-weight: bold;
   color: #333333;
 }
-
-/* h2 {
-  font-size: 32px;
+/*
+h2 {
+  font-size: 18px;
   font-weight: bold;
   color: #333333;
-}*/
+} */
+
+.moduleCardTitle{
+  font-size: 18px;
+  font-weight: bold;
+  color: white;
+}
 
 h3 {
   font-size: 24px;
