--- a/styles/modules.css
+++ b/styles/modules.css
@@ -8,17 +8,45 @@
   background-color: red;
 } */
 
+.moduleColumn{
+  padding: 15px 15px;
+}
+
 .card{
-  border-radius: 30px;
+  border-radius: 10px;
   width: 100% !important;
+  margin: 0 0 !important;
+}
+
+.cardImgContainer{
+  padding: 0 0;
+  position: relative;
+  overflow: hidden;
 }
 
 .card-img-top{
-  border-top-left-radius: 30px;
-  border-top-right-radius: 30px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
-.moduleColumn{
-  padding: 15px 15px;
+
+.card-img-overlay{
+  background-image: linear-gradient(#ffffff00 55%, #000000)!important;
+  padding: 1rem;
+}
+
+.moduleCardTitle{
+  font-size: 18px;
+  font-weight: bold;
+  color: white;
+}
+
+.moduleCardTitle{
+  position: absolute;
+  bottom: 0px;
+}
+
+.card-body{
+  padding: 1rem;
 }
 
 .card-text{
@@ -26,82 +54,3 @@
   line-height: 24px;
   font-weight: 500;
 }
-
-
-/*Modules Page Styling*/
-/* main {
-  text-align: center;
-}
-
-.caption{
-  padding-left: 0;
-  padding-right: 0;
-} */
-
-/*.modules_container {
-  display: block;
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-}*/
-
-/* .moduleBox {
-  display: inline-block;
-  height: 500px;
-  margin: 2em;
-  text-align: center;
-  box-shadow: 0px 4px 16px #C3C3C3;
-  border-radius: 8px;
-}
-
-.Top_PicHalf {
-  height: 50%;
-  background-position: center;
-  background-size: 100%;
-  background-repeat: no-repeat;
-  background-color: #FFF;
-  border-radius: 8px;
-}
-
-#lesson_CyberBullying {
-  background-image: url('/img/placeholder.png');
-  background-size: 50%;
-}
-
-#lesson_News{
-  background-image: url('/img/placeholder.png');
-  background-size: 50%;
-}
-
-#lesson_Info {
-  background-image: url('/img/placeholder.png');
-  background-size: 50%;
-}
-
-#lesson_Online{
-  background-image: url('/img/placeholder.png');
-  background-size: 50%;
-}
-
-#lesson_DigitalFoot {
-  background-image: url('/img/placeholder.png');
-  background-size: 50%;
-}
-
-#lesson_Privacy {
-  background-image: url('/img/placeholder.png');
-  background-size: 50%;
-}
-
-.Bottom_TextHalf {
-    width: 96%;
-    float: left;
-    text-align: center;
-    margin-left: 2%;
-    margin-right: 2%;
-    border-radius: 8px;
-}
-
-.Bottom_TextHalf .black, a {
-  font-size: 14px;
-} */
