fixed css naming & starting home below the fold

--- a/styles/all.css
+++ b/styles/all.css
@@ -72,7 +72,7 @@ h4, p {
   font-weight: 500;
 }
 
-.fancy-color{
+.brand{
   font-weight: bold !important;
   color: #14a1f6 !important;
   font-style: italic !important;
