home end cta and trying monochromatic scheme

--- a/styles/all.css
+++ b/styles/all.css
@@ -95,7 +95,7 @@ h4, p {
 }
 
 .nicelyRoundedButton {
-  background-color: #6EB43F;
+  background-color: #14A1F6;
   color: #FFF;
   width: 270px;
   height: 60px;
