--- a/styles/index.css
+++ b/styles/index.css
@@ -33,7 +33,7 @@
 }
 
 #homePage_button {
-  background-color: #489BFF;
+  background-color: #14A1F6;
   width: 250px;
   height: 60px;
   border-radius: 30px;
@@ -100,7 +100,9 @@
 }
 
 .home_parents {
-  width: 100%;
+  width: 70%;
+  padding-bottom: 5em;
+  padding-left: 2em;
 }
 
 /*Mobile Format*/
