--- a/styles/modules.css
+++ b/styles/modules.css
@@ -12,7 +12,7 @@
 .customCarouselControls{
   height: 50px;
   width: 50px;
-  background-color: #6EB43F;
+  background-color: #14A1F6;
   border-radius: 50%;
   display: inline-block;
   text-align: center;
