--- a/styles/index.css
+++ b/styles/index.css
@@ -14,6 +14,16 @@
     float: left;*/
 }
 
+.trioTitle{
+  font-size: 36px;
+  padding-top:1em;
+}
+
+.trioSubtitle{
+  padding-left: 30px;
+  padding-right:30px;
+}
+
 .caption{
   padding-left: 0;
   padding-right: 0;
