--- a/styles/all.css
+++ b/styles/all.css
@@ -70,7 +70,24 @@ h4, p {
   position: relative;
   border: 0;
 } */
+.footerRow{
+  padding: 1em 0;
+}
 
+.footerLeftItem{
+  margin: 0px;
+}
+
+.footerButton{
+  background-color: #14A1F6;
+  color: #FFF;
+  z-index: 1000;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 500;
+  border: 0;
+  padding: 5px 15px;
+}
 
 .nicelyRoundedButton {
   background-color: #14A1F6;
