Media and press page complete

--- a/styles/all.css
+++ b/styles/all.css
@@ -58,10 +58,44 @@ h4, p {
   font-weight: 500;
 }
 
+/* for pages that are linked in the footer */
+.footerPageTitle{
+  padding-top:3em;
+  padding-bottom:15px;
+  padding-left: 1em;
+  padding-right: 1em;
+}
+
+/* media and press page */
+.pressItemContainer{
+  background-color: white;
+  margin: 30px;
+}
+
+.pressLeftContainer{
+  padding: 30px 40px;
+}
+
+.pressText{
+  padding-top: 10px !important;
+  padding-bottom: 10px !important;
+  margin: 0;
+}
+
+.pressLogoContainer{
+  padding: 40px;
+  position: relative;
+}
+
+.pressLogo{
+  width: 100%;
+}
+
 .termsRow{
   padding: 0 46px;
 }
 
+/* terms of use page */
 .termsSubheader{
   width:100%;
   padding-bottom: 1em;
@@ -79,6 +113,35 @@ h4, p {
   margin: 1em 0px !important;
 }
 
+/* header */
+.nav-item{
+  padding: 0 30px;
+}
+
+.testDriveLogo{
+  margin-left: 30px;
+}
+
+.fancy{
+  font-size: 36px;
+  font-weight: 500;
+}
+
+.brand{
+  font-weight: bold !important;
+  color: #14a1f6 !important;
+  font-style: italic !important;
+}
+
+.navbar-brand{
+  padding: 0 15px;
+}
+
+.nav-link{
+  font-weight: 500;
+}
+
+/* footer  */
 .footerRow{
   padding: 1em 0px;
 }
@@ -98,6 +161,7 @@ h4, p {
   padding: 5px 15px;
 }
 
+/* other */
 .nicelyRoundedButton {
   background-color: #14A1F6;
   color: #FFF;
@@ -120,45 +184,6 @@ h4, p {
 .paddedTop{
   padding-top: 3em;
 }
-
-.fancy{
-  font-size: 36px;
-  font-weight: 500;
-}
-
-.brand{
-  font-weight: bold !important;
-  color: #14a1f6 !important;
-  font-style: italic !important;
-}
-
-.nav-item{
-  padding: 0 30px;
-}
-
-.testDriveLogo{
-  margin-left: 30px;
-}
-
-.navbar-brand{
-  padding: 0 15px;
-}
-
-.nav-link{
-  font-weight: 500;
-}
-
-/* .nicelyRoundedButton {
-  background-color: #14A1F6;
-  color: #FFF;
-  width: 270px;
-  height: 60px;
-  border-radius: 30px;
-  cursor: pointer;
-  font-size: 20px;
-  font-weight: 600;
-  border: 0;
-} */
 
 .caption {
   padding-top: 1em;
