--- a/styles/modules.css
+++ b/styles/modules.css
@@ -1,3 +1,7 @@
+.carouselColumn{
+  padding: 0 46px;
+}
+
 /* Pagination */
 
 .page-item:first-child .page-link, .page-item:last-child .page-link {
