Deleted unused files, css cleanup, new favicon

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -5,3 +5,22 @@
 .footerVerB{
   padding-top:4em;
 }
+
+.footerRow{
+  padding: 1em 0px;
+}
+
+.footerLeftItem{
+  margin: 0px;
+}
+
+.footerButton{
+  background-color: #14A1F6;
+  color: #FFF;
+  z-index: 1000;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 500;
+  border: 0;
+  padding: 5px 15px;
+}
