--- a/styles/header.css
+++ b/styles/header.css
@@ -6,6 +6,14 @@
    height: auto !important;
  }
 
+.logoLinkContainer{
+  display: contents;
+}
+
+.logoLinkContainer:hover{
+  text-decoration: none;
+}
+
 .nav-item{
  padding: 0 30px;
 }
