More accessibility improvements

--- a/styles/all.css
+++ b/styles/all.css
@@ -41,12 +41,14 @@ h1{
   font-size: 48px;
   font-weight: bold;
   color: #333333;
+  cursor: default;
 }
 
 h3 {
   font-size: 24px;
   font-weight: bold;
   color: #333333;
+  cursor: default;
 }
 
 h4, p {
@@ -56,10 +58,17 @@ h4, p {
   margin-bottom: 40px;
   line-height: 1.7;
   font-weight: 500;
+  cursor: default;
 }
 
 ul {
 	list-style-type: none;
+}
+
+main a {
+  color: #0093EC;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 /* for pages that are linked in the footer */
@@ -76,7 +85,7 @@ ul {
 }
 
 .nicelyRoundedButton {
-  background-color: #14A1F6;
+  background-color: #0093EC;
   color: #FFF;
   z-index: 1000;
   width: 250px;
