--- a/styles/faq.css
+++ b/styles/faq.css
@@ -8,6 +8,7 @@
   border-radius: 0px;
   color: #333333 ;
   padding: 8px 0;
+  text-decoration: none;
 }
 
 /* Customizing active tab appearance */
