--- a/styles/footer.css
+++ b/styles/footer.css
@@ -16,7 +16,7 @@
 }
 
 .footerButton{
-  background-color: #14A1F6;
+  background-color: #0093EC;
   color: #FFF;
   z-index: 1000;
   cursor: pointer;
