--- a/styles/header.css
+++ b/styles/header.css
@@ -29,7 +29,7 @@
 
 .brand{
  font-weight: bold !important;
- color: #14a1f6 !important;
+ color: #0093EC !important;
  font-style: italic !important;
 }
 
