Added sign up links for listserv to educators and parents pages

--- a/styles/all.css
+++ b/styles/all.css
@@ -107,6 +107,10 @@ main a {
   padding-top: 3em;
 }
 
+.addPaddingBottom{
+  padding-bottom: 2em;
+}
+
 .caption {
   padding-top: 1em;
   padding-left: 16em;
