--- a/styles/header.css
+++ b/styles/header.css
@@ -16,7 +16,11 @@
 
 .nav-item{
   padding: 0 30px;
- /* padding: 0 20px; */
+}
+
+.nav-item-test{
+  /* padding: 0 30px; */
+ padding: 0 25px;
 }
 
 .testDriveLogo{
