--- a/styles/forparents.css
+++ b/styles/forparents.css
@@ -15,6 +15,10 @@
   width: 90%;
 }
 
+.smtd_vid {
+  width: 100%;
+}
+
 /*For Parent Page Styling*/
 /* #forParents_s1 {
     background-color: #89CCE2;
