--- a/styles/all.css
+++ b/styles/all.css
@@ -154,3 +154,19 @@ main a {
     text-align: right;
   }
 }
+
+video::-webkit-media-controls-overlay-play-button {
+  -webkit-appearance: media-overlay-play-button;
+  display: flex;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: -40px;
+  margin-top: -40px;
+  border: none;
+  box-sizing: border-box;
+  background-color: transparent;
+  width: 80px;
+  height: 80px;
+  padding: 0;
+}
