--- a/styles/header.css
+++ b/styles/header.css
@@ -16,11 +16,13 @@
 
 .nav-item{
   padding: 0 30px;
+  white-space: nowrap;
 }
 
 .nav-item-test{
   /* padding: 0 30px; */
  padding: 0 15px;
+ white-space: nowrap;
 }
 
 .testDriveLogo{
