--- a/styles/donate.css
+++ b/styles/donate.css
@@ -28,3 +28,22 @@
     display: flex;
     justify-content: center;
 }
+
+.donationButton {
+    background-color: #0093EC;
+    color: #FFF;
+    z-index: 1000;
+    width: 320px;
+    height: 80px;
+    border-radius: 30px;
+    cursor: pointer;
+    font-size: 20px;
+    line-height: 1.5;
+    font-weight: 600;
+    border: 0;
+  }
+
+  .donationButton-text{
+      font-size: 15px;
+      margin: 0px;
+  }
