--- a/styles/donate.css
+++ b/styles/donate.css
@@ -18,10 +18,10 @@
 
 /* images */
 
-#donate_graphic {
+/* #donate_graphic {
     display: flex;
     justify-content: center;
-}
+} */
 
 #donate_img {
     max-width: 100%;
@@ -53,4 +53,19 @@
 
 .avoidWrap {
     white-space: nowrap;
+}
+
+.addLeftMargin{
+    margin:0px 12px 0px 10px;
+}
+
+.addRightMargin{
+    margin:0px 10px 0px 12px;
+}
+
+.donationButtonAlignment{
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
 }
