donation button padding edit

--- a/styles/donate.css
+++ b/styles/donate.css
@@ -56,11 +56,11 @@
 }
 
 .addLeftMargin{
-    margin:0px 12px 0px 10px;
+    margin:0px 20px;
 }
 
 .addRightMargin{
-    margin:0px 10px 0px 12px;
+    /* margin:0px 10px 0px 12px; */
 }
 
 .donationButtonAlignment{
