add Team page prototype

--- a/styles/team.css
+++ b/styles/team.css
@@ -46,3 +46,15 @@
 .italicText{
   font-style: italic;
 }
+
+.noDecorationText {
+   text-decoration: none;
+}
+
+.noDecoText, .noDecoText:hover, .noDecoText:active{
+  text-decoration: none;
+}
+
+.hyperlinkBlue{
+  color: #0093EC;
+}
