Final update to donate page, changes to team page prototype

--- a/styles/donate.css
+++ b/styles/donate.css
@@ -17,21 +17,12 @@
 }
 
 /* images */
-
-/* #donate_graphic {
-    display: flex;
-    justify-content: center;
-} */
-
 #donate_img {
     max-width: 100%;
     height: auto;
 }
 
-.donation_logos {
-    margin: 10px 40px 50px 0px;
-}
-
+/* button */
 .donationButton {
     background-color: #0093EC;
     color: #FFF;
@@ -49,23 +40,4 @@
 .donationButton-text {
     font-size: 15px;
     margin: 0px;
-}
-
-.avoidWrap {
-    white-space: nowrap;
-}
-
-.addLeftMargin{
-    margin:0px 20px;
-}
-
-.addRightMargin{
-    /* margin:0px 10px 0px 12px; */
-}
-
-.donationButtonAlignment{
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
 }
