--- a/styles/header.css
+++ b/styles/header.css
@@ -20,7 +20,7 @@
 }
 
 .nav-item-test{
-  padding: 0 30px;
+  padding: 0 25px;
  /* padding: 0 15px; */
  white-space: nowrap;
 }
@@ -69,6 +69,7 @@
   display: flex;
   align-items: center;
   align-content: center;
+  justify-content: flex-end;
 }
 
 .donationHeart{
