--- a/styles/announcementBanner.css
+++ b/styles/announcementBanner.css
@@ -1,47 +1,47 @@
 .announcementBanner {
-  margin: 30px 30px 0 30px;
-  background-color: white;
-  min-height: 100px;
+    margin: 30px 30px 0 30px;
+    background-color: white;
+    min-height: 100px;
 }
 
 .announcementBanner .topLeftCircle {
-  z-index: 1;
-  position: absolute;
-  top: -28px;
-  left: -22px;
+    z-index: 1;
+    position: absolute;
+    top: -28px;
+    left: -22px;
 }
 
 .announcementBanner .topLeftIcon {
-  z-index: 2;
-  position: absolute;
-  top: -17px;
-  left: -14px;
-  transform: rotate(0.9turn);
+    z-index: 2;
+    position: absolute;
+    top: -17px;
+    left: -14px;
+    transform: rotate(0.9turn);
 }
 
 .announcementBanner .md-img {
-  /* margin-right: 20px; */
-  margin: 20px 20px 20px 0px;
+    margin-right: 20px;
+    /* margin: 20px 20px 20px 0px; */
 }
 
 .announcementBanner .sm-img {
-  margin: 20px 20px 0px 0px;
+    margin: 20px 20px 0px 0px;
 }
 
 .announcementBanner p {
-  color: #E94B68;
-  margin-bottom: 20px;
-  font-size: 22px;
+    color: #E94B68;
+    margin-bottom: 20px;
+    font-size: 22px;
 }
 
 .announcementBanner .boldText {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 .announcementBanner .largeText {
-  font-size: 28px;
+    font-size: 28px;
 }
 
 .announcementBanner .italicText {
-  font-style: italic;
+    font-style: italic;
 }
