--- a/styles/foreducators.css
+++ b/styles/foreducators.css
@@ -1,36 +1,40 @@
 /* Adjustments to announcement banner */
 
 .announcementBanner .topLeftCircle {
-  top: -22px;
+    top: -22px;
 }
 
 .announcementBanner .topLeftIcon {
-  top: -11px;
+    top: -11px;
 }
 
-.announcementBanner p {
+
+/* .announcementBanner p {
   font-size: 18px;
-}
+} */
 
-.announcementBanner .largeText {
+
+/* .announcementBanner .largeText {
   font-size: 22px;
-}
+} */
+
 
 /* Educators Page */
 
 .educators_image {
-  width:100%;
+    width: 100%;
 }
 
-.col-md-6, .col-sm-4 {
-  padding-top: 15px;
-  padding-bottom: 15px;
+.col-md-6,
+.col-sm-4 {
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
-.testimonialPanel{
-  width: 300px;
-  height: 300px;
-  background-color: white;
-  border-radius: 30px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.19);
+.testimonialPanel {
+    width: 300px;
+    height: 300px;
+    background-color: white;
+    border-radius: 30px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.19);
 }
