Add outcome evaluation banner 3 to home page, update research and privacy page, update user analytics image

--- a/styles/announcementBanner.css
+++ b/styles/announcementBanner.css
@@ -45,3 +45,7 @@
 .announcementBanner .italicText {
     font-style: italic;
 }
+
+.announcementBanner .underlineText {
+    text-decoration: underline;
+}
