--- a/styles/all.css
+++ b/styles/all.css
@@ -1,163 +1,188 @@
 /* ========== *
 * = Global = *
 * ========== */
-@font-face {
-  font-family: Avenir Next;
-  src : url('../fonts/Avenir_Next/AvenirNextLTPro-Regular.otf');
-  font-weight: 500;
-}
-
 
 @font-face {
-  font-family: Avenir Next;
-  src : url('../fonts/Avenir_Next/AvenirNextLTPro-Demi.otf');
-  font-weight: 600;
+    font-family: Avenir Next;
+    src: url('../fonts/Avenir_Next/AvenirNextLTPro-Regular.otf');
+    font-weight: 500;
 }
 
 @font-face {
-  font-family: Avenir Next;
-  src : url('../fonts/Avenir_Next/AvenirNextLTPro-Bold.otf');
-  font-weight: bold;
+    font-family: Avenir Next;
+    src: url('../fonts/Avenir_Next/AvenirNextLTPro-Demi.otf');
+    font-weight: 600;
 }
 
+@font-face {
+    font-family: Avenir Next;
+    src: url('../fonts/Avenir_Next/AvenirNextLTPro-Bold.otf');
+    font-weight: bold;
+}
 
 html * {
-  font-family: Avenir Next;
+    font-family: Avenir Next;
 }
 
 body {
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  background-color: #F1F8FB;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    background-color: #F1F8FB;
 }
 
 main {
-  flex: 1 0 auto;
+    flex: 1 0 auto;
 }
 
-h1{
-  font-size: 48px;
-  font-weight: bold;
-  color: #333333;
-  cursor: default;
+h1 {
+    font-size: 48px;
+    font-weight: bold;
+    color: #333333;
+    cursor: default;
 }
 
 h2 {
-  font-size: 30px;
-  font-weight: bold;
-  color: #333333;
-  cursor: default;
+    font-size: 30px;
+    font-weight: bold;
+    color: #333333;
+    cursor: default;
 }
 
 h3 {
-  font-size: 24px;
-  font-weight: bold;
-  color: #333333;
-  cursor: default;
+    font-size: 24px;
+    font-weight: bold;
+    color: #333333;
+    cursor: default;
 }
 
-h4, p {
-  font-size: 18px;
-  color: #545454;
-  margin-top: 20px;
-  margin-bottom: 40px;
-  line-height: 1.7;
-  font-weight: 500;
-  cursor: default;
+h4,
+p {
+    font-size: 18px;
+    color: #545454;
+    margin-top: 20px;
+    margin-bottom: 40px;
+    line-height: 1.7;
+    font-weight: 500;
+    cursor: default;
 }
 
 ul {
-	list-style-type: none;
+    list-style-type: none;
 }
 
 main a {
-  color: #0093EC;
-  text-decoration: underline;
-  cursor: pointer;
+    color: #0093EC;
+    text-decoration: underline;
+    cursor: pointer;
 }
+
 
 /* general use classes */
+
 .pageSectionTitle {
-  padding-top: 3em;
+    padding-top: 3em;
 }
+
 
 /* for pages that are linked in the footer */
-.footerPageTitle{
-  padding-top:3em;
-  padding-bottom:15px;
-  padding-left: 1em;
-  padding-right: 1em;
+
+.footerPageTitle {
+    padding-top: 3em;
+    padding-bottom: 15px;
+    padding-left: 1em;
+    padding-right: 1em;
 }
 
+
 /* other */
-.customHyperlink{
-  /* can add a color here */
+
+.customHyperlink {
+    /* can add a color here */
 }
 
 .nicelyRoundedButton {
-  background-color: #0093EC;
-  color: #FFF;
-  z-index: 1000;
-  width: 250px;
-  height: 60px;
-  border-radius: 30px;
-  cursor: pointer;
-  font-size: 18px;
-  line-height: 2;
-  font-weight: 600;
-  border: 0;
+    background-color: #0093EC;
+    color: #FFF;
+    z-index: 1000;
+    width: 250px;
+    height: 60px;
+    border-radius: 30px;
+    cursor: pointer;
+    font-size: 18px;
+    line-height: 2;
+    font-weight: 600;
+    border: 0;
+}
+
+.nicelyRoundedButton-large {
+    background-color: #0093EC;
+    color: #FFF;
+    z-index: 1000;
+    width: 300px;
+    height: 60px;
+    border-radius: 30px;
+    cursor: pointer;
+    font-size: 18px;
+    line-height: 2;
+    font-weight: 600;
+    border: 0;
 }
 
 .paddedRow {
-  padding-top: 3em;
-  padding-bottom: 3em;
+    padding-top: 3em;
+    padding-bottom: 3em;
 }
 
-.paddedTop{
-  padding-top: 3em;
+.paddedTop {
+    padding-top: 3em;
 }
 
-.addPaddingBottom{
-  padding-bottom: 2em;
+.addPaddingBottom {
+    padding-bottom: 2em;
 }
 
 .caption {
-  padding-top: 1em;
-  padding-left: 16em;
-  padding-right: 16em;
-  line-height: normal;
-  text-align: center;
-  font-size: 24px;
+    padding-top: 1em;
+    padding-left: 16em;
+    padding-right: 16em;
+    line-height: normal;
+    text-align: center;
+    font-size: 24px;
 }
 
 .paddedRow {
-  /* padding-top: 3em; */
-  padding-bottom: 6em;
+    /* padding-top: 3em; */
+    padding-bottom: 6em;
 }
 
-.col-md-6, .col-sm-4 {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-left: 46px;
-  padding-right: 46px;
+.col-md-6,
+.col-sm-4 {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 46px;
+    padding-right: 46px;
 }
 
-.listServSubtext{
-  margin-bottom: 20px;
+.listServSubtext {
+    margin-bottom: 20px;
 }
+
 
 /* Adding extra padding when tablet or larger */
+
 @media (min-width: 768px) {
-  .footerRow{
-    padding: 1em 31px !important;
-  }
+    .footerRow {
+        padding: 1em 31px !important;
+    }
 }
 
+
 /* Aligning nav items right when smaller than desktop (992px) */
+
 @media (max-width: 991.98px) {
-  .nav-link{
-    text-align: right;
-  }
+    .nav-link {
+        text-align: right;
+    }
 }
