--- a/styles/forresearchers.css
+++ b/styles/forresearchers.css
@@ -5,3 +5,12 @@
 .researchParagraph {
     margin: 1em 0px !important;
 }
+
+.paddedRow-small {
+    padding-top: 1.5em;
+    padding-bottom: 1.5em;
+}
+
+.nicelyRoundedButton-large {
+    margin-bottom: 40px;
+}
